--- a/css/style.css
+++ b/css/style.css
@@ -235,16 +235,19 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    column-gap: 10px;
 }
 
 .benefit-section-item {
     display: grid;
-    grid-template-columns: 90px 70%;
+    grid-template-columns: 90px auto;
     grid-template-rows: 40px auto;
     column-gap: 15px;
     row-gap: 10px;
     justify-content: center;
     padding: 30px 0px;
+    width: 90%;
+    margin: auto;
 }
 
 .benefit-section-item-image {
@@ -278,7 +281,6 @@
 .benefit-section-item-text {
     grid-row: 2;
     grid-column: 2;
-    max-width: 250px;
 }
 
 @media all and (min-width: 750px) {
@@ -287,9 +289,10 @@
     }
 
     .benefit-section-item {
-        grid-template-columns: 100px 70%;
+        grid-template-columns: 100px auto;
         column-gap: 20px;
         padding: 0px;
+        margin: 0px;
     }
 
     .benefit-section-item-image {
